# stockies

./: .gitignore  QUICKSTART.md  README.md  app.py  pyproject.toml  test_sp500_fetch.py
.cursor/rules/: markdownfile-creations.md  python.md
config/: settings.py
src/backtest/: __init__.py  engine.py  metrics.py  portfolio.py
src/data/: __init__.py  cache.py  fetcher.py
src/scanner/: __init__.py  moat_analyzer.py  screener.py
src/strategy/: __init__.py  indicators.py  parser.py  rules_engine.py
src/ui/: backtest_page.py  scanner_page.py  strategy_page.py
src/utils/: __init__.py  validators.py
strategies/examples/: momentum_breakout.json  rsi_mean_reversion.json
